# Griffith-OS

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: build-os.yml
crates/gos-bridge/: Cargo.toml
crates/gos-bridge/src/: lib.rs
crates/gos-bridge/tests/: bridge_tests.rs
crates/gos-core/: Cargo.toml
crates/gos-core/src/: identity.rs  lib.rs  settings.rs  types.rs
crates/gos-core/tests/: core_tests.rs
crates/gos-platform/: Cargo.toml
crates/gos-platform/src/: lib.rs  linux.rs  macos.rs  traits.rs  windows.rs
crates/gos-privacy/: Cargo.toml
crates/gos-privacy/examples/: check.rs
crates/gos-privacy/src/: crypto.rs  doh.rs  engine.rs  lib.rs  net.rs  tor.rs
docs/: ARCHITECTURE.md  PRP-gos-os-evolution.md  RESEARCH-os-evolution.md  THREAT_MODEL.md
os/: README.md  flake.nix
os/hosts/: disk-portable.nix  disk-vm.nix  gos-gateway.nix
os/modules/: gos-anti-tracking.nix  gos-autoupdate.nix  gos-base.nix  gos-browser.nix  gos-desktop.nix  gos-hardening.nix  gos-installer.nix  gos-leaktest.nix  gos-toolchain.nix  gos-tor.nix  gos-transfer.nix  gos-vm-guest.nix
scripts/: dev.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: CrossoverPanel.tsx  LeakPanel.tsx  NodeCard.tsx  PrivacyControls.tsx  StatusHero.tsx  Toggle.tsx  Topbar.tsx  icons.tsx
ui/src/lib/: api.ts  types.ts  useGos.ts
ui/src/styles/: global.css  tokens.css
