# Griffith OS (GOS) — Rust workspace
# One codebase, three native builds (macOS / Linux / Windows).
[workspace]
resolver = "2"
members = [
  "crates/gos-core",
  "crates/gos-platform",
  "crates/gos-bridge",
  "crates/gos-privacy",
  "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Emmett Griffith"]
repository = "https://github.com/emmettcgriffith/GOS"

# Shared dependency versions live here so every crate stays in lockstep.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
tracing = "0.1"

# Build profiles — keep dev builds quick, release small.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
