[package]
name = "gos-privacy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gos-core = { path = "../gos-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
# TLS for DoH-over-HTTPS (and the rustls provider arti needs).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"

# Tor (arti) sits behind a feature so the app builds/runs without waiting on the
# (heavy) Tor dependency tree.
arti-client = { version = "0.43.0", default-features = false, features = ["tokio", "rustls"], optional = true }
tor-rtcompat = { version = "0.43.0", features = ["tokio", "rustls"], optional = true }

[features]
default = ["tor"]
tor = ["dep:arti-client", "dep:tor-rtcompat"]
